--- a/app/src/main/res/layout/registro.xml
+++ b/app/src/main/res/layout/registro.xml
@@ -1,99 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_vertical"
-    android:gravity="center_horizontal"
+    android:gravity="center"
+
     android:orientation="vertical">
+
 
     <ImageView
         android:id="@+id/imagenId"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="20dp"
+        android:contentDescription="@string/todo"
         android:onClick="cargarImagen"
+        android:padding="20dp"
         android:src="@drawable/imagen_no_disponible" />
 
-
-
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/nombre"
+        android:padding="10dp"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Nombre"
+        android:hint="@string/nombre"
         tools:layout_editor_absoluteX="100dp"
-        tools:layout_editor_absoluteY="78dp" />
+        tools:layout_editor_absoluteY="78dp"
+        android:importantForAutofill="no" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/apellido"
+        android:padding="10dp"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Apellido"
+        android:hint="@string/aoellido"
         tools:layout_editor_absoluteX="104dp"
-        tools:layout_editor_absoluteY="154dp" />
+        tools:layout_editor_absoluteY="154dp"
+        android:importantForAutofill="no" />
 
     <EditText
-        android:id="@+id/editText7"
+        android:padding="10dp"
+        android:id="@+id/email"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:ems="10"
-        android:hint="E-Mail"
-        android:inputType="textEmailAddress" />
-
-    <EditText
-        android:id="@+id/editText9"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:ems="10"
-        android:hint="Telefono"
-        android:inputType="phone" />
+        android:hint="@string/mail"
+        android:inputType="textEmailAddress"
+        android:importantForAutofill="no" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tituloRol"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="Elija su Rol:" />
+        android:text="@string/Elija"
+        android:padding="10dp"/>
 
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="250dp"
         android:layout_height="44dp"
-        android:spinnerMode="dialog" />
+        android:spinnerMode="dialog"
+        android:padding="10dp"/>
+
 
     <EditText
-        android:id="@+id/editText5"
+        android:padding="10dp"
+        android:id="@+id/usuarioDni"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Descripcion del Rol"
-        />
+        android:inputType="number"
+        android:hint="@string/usuario"
+        android:importantForAutofill="no" />
 
     <EditText
-        android:id="@+id/editText8"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="DNI" />
-
-    <EditText
-        android:id="@+id/editText10"
+        android:padding="10dp"
+        android:id="@+id/contrasenia"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:hint="Contraseña"/>
+        android:hint="@string/contrasenia"
+        android:importantForAutofill="no" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="240dp"
+        android:padding="10dp"
+        android:id="@+id/btnRegistroForm"
+        android:layout_width="250dp"
         android:layout_height="60dp"
-        android:text="Registrar" />
+        android:text="@string/registrar" />
 
 </LinearLayout>
