--- a/app/src/main/res/layout/lista_personas.xml
+++ b/app/src/main/res/layout/lista_personas.xml
@@ -10,7 +10,7 @@
     app:cardUseCompatPadding="true"
     >
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp">
@@ -19,33 +19,62 @@
             android:id="@+id/imagen_persona"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_launcher_background">
-
+            android:src="@drawable/imagen_no_disponible">
         </ImageView>
-
-        <TextView
-            android:id="@+id/nombre_persona"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_toEndOf="@id/imagen_persona"
-            android:layout_toRightOf="@id/imagen_persona"
-            android:text="Nombre de la Persona"
-            android:textSize="20sp"
-            android:textStyle="bold"></TextView>
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/fecha_nacimiento"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/nombre_persona"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_toEndOf="@id/imagen_persona"
-            android:layout_toRightOf="@id/imagen_persona"
-            android:text="06-05-2020"></TextView>
+            <LinearLayout
+                android:layout_width="299dp"
+                android:layout_height="102dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="vertical">
 
-    </RelativeLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="20dp">
+
+                    <TextView
+                        android:id="@+id/nombre_persona"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Nombre: "
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/nombre_recicle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Miguel Emmanuel"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/apellido_persona"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Apellido: "
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/apellido_recicle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Soraire"
+                        android:textStyle="bold" />
+                </LinearLayout>
+            </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
 
 </androidx.cardview.widget.CardView>
