--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -29,7 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
-                    android:gravity="center_vertical"
+                    android:gravity="center"
                     android:orientation="vertical">
 
                     <ImageView
@@ -41,148 +41,117 @@
                     <Space
                         android:layout_width="wrap_content"
                         android:layout_height="10dp"
-
                         />
-                    <LinearLayout
 
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:orientation="horizontal"
-                        >
-                    <TextView
-                        android:id="@+id/Nom"
-                        android:textSize="15dp"
-                        android:textStyle="bold"
-                        android:layout_width="150dp"
-                        android:layout_height="30dp"
-                        android:text="@string/nombre" />
-
-                        <Space
-                            android:layout_width="30dp"
+                             <TextView
+                            android:id="@+id/Nom"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1" />
-
-                        <TextView
-                        android:layout_width="220dp"
-                        android:textSize="15sp"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/nombrePerfil"
-                        android:text="Pepe"
-
-                        />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:orientation="horizontal">
-                        <TextView
-                            android:id="@+id/ape"
+                            android:text="Nombre: "
                             android:textSize="15dp"
                             android:textStyle="bold"
-                            android:layout_width="150dp"
-                            android:layout_height="30dp"
-                            android:text="@string/aoellido" />
+                            tools:layout_editor_absoluteX="117dp"
+                            tools:layout_editor_absoluteY="35dp"
+                            tools:ignore="MissingConstraints" />
 
-                        <Space
-                            android:layout_width="30dp"
+                        <TextView
+                            android:id="@+id/nombrePerfil"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1" />
+                            android:text="Pepe"
+                            android:textSize="15sp"
+                            tools:layout_editor_absoluteX="196dp"
+                            tools:layout_editor_absoluteY="35dp"
+                            tools:ignore="MissingConstraints" />
+
+                        <TextView
+                            android:id="@+id/ape"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Apellido: "
+                            android:textSize="15dp"
+                            android:textStyle="bold"
+                            tools:layout_editor_absoluteX="117dp"
+                            tools:layout_editor_absoluteY="64dp"
+                            tools:ignore="MissingConstraints" />
 
                         <TextView
                             android:id="@+id/apellidoPerfil"
-                            android:layout_width="220dp"
-                            android:textSize="15sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:text="Argento"
 
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
+                            android:textSize="15sp"
+                            tools:layout_editor_absoluteX="196dp"
+                            tools:layout_editor_absoluteY="64dp"
+                            tools:ignore="MissingConstraints" />
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:orientation="horizontal">
                         <TextView
                             android:id="@+id/usu"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Usuario: "
                             android:textSize="15dp"
                             android:textStyle="bold"
-                            android:layout_width="150dp"
-                            android:layout_height="30dp"
-                            android:text="@string/usuario" />
-
-                        <Space
-                            android:layout_width="30dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
+                            tools:layout_editor_absoluteX="117dp"
+                            tools:layout_editor_absoluteY="6dp" />
 
                         <TextView
                             android:id="@+id/usuarioPerfil"
-                            android:layout_width="220dp"
-                            android:textSize="15sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:text="89"
 
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                    <LinearLayout
+                            android:textSize="15sp"
+                            tools:layout_editor_absoluteX="196dp"
+                            tools:layout_editor_absoluteY="6dp" />
 
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
                         <TextView
                             android:id="@+id/mail"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="E-Mail: "
                             android:textSize="15dp"
                             android:textStyle="bold"
-                            android:layout_width="150dp"
-                            android:layout_height="30dp"
-                            android:text="@string/mail" />
-
-                        <Space
-                            android:layout_width="30dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
+                            tools:layout_editor_absoluteX="129dp"
+                            tools:layout_editor_absoluteY="94dp" />
 
                         <TextView
                             android:id="@+id/emailPerfil"
-                            android:layout_width="170dp"
-                            android:textSize="15sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:text="easd@asfdads.asd"
-                            android:layout_marginRight="50dp"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
+                            android:textSize="15sp"
+                            tools:layout_editor_absoluteX="196dp"
+                            tools:layout_editor_absoluteY="94dp" />
 
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
                         <TextView
                             android:id="@+id/ro"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Rol: "
                             android:textSize="15dp"
                             android:textStyle="bold"
-                            android:layout_width="150dp"
-                            android:layout_height="30dp"
-                            android:text="@string/rol" />
-
-                        <Space
-                            android:layout_width="30dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
+                            tools:layout_editor_absoluteX="150dp"
+                            tools:layout_editor_absoluteY="123dp" />
 
                         <TextView
                             android:id="@+id/rolPerfil"
-                            android:layout_width="220dp"
-                            android:textSize="15dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:text="Administrador"
 
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
+                            android:textSize="15dp"
+                            tools:layout_editor_absoluteX="196dp"
+                            tools:layout_editor_absoluteY="123dp" />
+
+
 
                     <ImageView
-                        android:layout_width="211dp"
-                        android:layout_height="163dp"
+                        android:id="@+id/imgRol"
+                        android:layout_width="match_parent"
+                        android:layout_height="199dp"
                         android:layout_gravity="center"
-                        android:layout_marginTop="3dp"
                         android:src="@drawable/piramide" />
                 </LinearLayout>
 
@@ -190,13 +159,19 @@
 
                 <LinearLayout android:id="@+id/tab2"
                     android:orientation="vertical"
+                    android:layout_gravity="center"
+                    android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" >
 
-                    <TextView android:id="@+id/textView2"
-                        android:text="Contenido Tab 2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+
+
+
                 </LinearLayout>
 
             </FrameLayout>
