--- a/app/src/main/res/layout/perfil_activity.xml
+++ b/app/src/main/res/layout/perfil_activity.xml
@@ -31,15 +31,9 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+        android:layout_height="569dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
     </androidx.viewpager.widget.ViewPager>
-    <TextView
-        android:id="@+id/prueba"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="98sp"
-        android:text="TextView" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
