--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -183,6 +183,7 @@
                         android:layout_height="163dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="3dp"
+                        android:onClick="irWeb"
                         android:src="@drawable/piramide" />
                 </LinearLayout>
 
