--- a/app/src/main/res/layout/lista_personas.xml
+++ b/app/src/main/res/layout/lista_personas.xml
@@ -32,11 +32,12 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="vertical">
-                <!--        <LinearLayout
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:layoutginBottom="20dp">
+                            android:layout_marginBottom="20dp"
+                            >
 
                        <TextView
                                 android:id="@+id/usuario_persona"
@@ -50,8 +51,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="2"
+                                android:inputType="number"
                                 android:textStyle="bold" />
-                        </LinearLayout>-->
+                        </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
